cabal-version:      2.0
name:               free-monad-comparison
version:            0.0.0.1
license:            MIT
license-file:       LICENSE.md
copyright:          2020 Dominic Steinitz
maintainer:         dominic@steinitz.org
author:             Dominic Steinitz <dominic@steinitz.org>
stability:          experimental
-- tested-with:        ghc ==8.4.4 ghc ==8.6.5 ghc ==8.8.1
homepage:           http://github.com/idontgetoutmuch/random-vars
bug-reports:        https://github.com/idontgetoutmuch/random-vars/issues
synopsis:           Random variables
description:
  Random number generation based on modeling random
  variables by an abstract type ('RVar') which can be
  composed and manipulated monadically and sampled in
  either monadic or \"pure\" styles. This may be a lie.

category:           Statistics
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/idontgetoutmuch/random-vars.git

executable prompt
    main-is:          PurePrompt.hs
    hs-source-dirs:

    default-language: Haskell2010
    build-depends:
        base -any,
        MonadPrompt,
        random

    ghc-options:
        -Weverything -Wno-missing-local-signatures
        -Wno-missing-import-lists -Wno-implicit-prelude
        -Wno-monomorphism-restriction -Wno-unsafe

executable freechurch
    main-is:          PureFreeChurch.hs
    hs-source-dirs:

    default-language: Haskell2010
    build-depends:
        base -any,
        free >=5.0.2 && <5.2,
        random,
        transformers >=0.5.6 && <0.6

    ghc-options:
        -Weverything -Wno-missing-local-signatures
        -Wno-missing-import-lists -Wno-implicit-prelude
        -Wno-monomorphism-restriction -Wno-unsafe
